create patch titles
